# CM2

./: CMakeLists.txt  main_parser.cpp  main_sm.cpp  parser.hpp  state_machine.cpp  state_machine.hpp  tests.cpp
